carshare-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: carshare-api
  name: carshare-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 31415
  selector:
    app: carshare-api
