carshare-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: carshare-web
  name: carshare-web
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: carshare-web
