ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: carshare.test
    http:
      paths:
      - path: /
        backend:  
          serviceName: carshare-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: carshare-api
          servicePort: 80
